cleaned and design clarified

--- a/platforms/android/assets/www/css/bonoway.css
+++ b/platforms/android/assets/www/css/bonoway.css
@@ -53,6 +53,14 @@ a:hover {
 .container{
     margin-top: 0;
 }
+
+/* to adjust the container for proper mobile display */
+.adjust{
+    padding: 0px;
+    margin: 0px;
+    padding-bottom: 10px;
+}
+
 /* _________________________________________________________ */
 
 
@@ -97,7 +105,7 @@ a:hover {
 
 /* NAVBAR SECONDARYBAR : top bar, display previous and few options related to content*/
 .secondarybar{
-    position: fixed;
+    position: relative;
     z-index: 5;
     width: 100%;
     top: 0px;
@@ -181,6 +189,11 @@ background: #ECEDED;
 
 /* BOOSTRAP GRID SYSTEM FOR LIST  */
 
+.row{
+    width: 100%;
+    margin: 0px;
+}
+
 /* To avoid multiline column */
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
     padding-right: 0px;
@@ -239,6 +252,39 @@ background: #ECEDED;
 .activated {
     color: #007aff; /* (blue) color: #ffffff; */
 }
+/* _________________________________________________________ */
+
+
+
+/* MAP CONTAINER DESIGN */
+
+/* contaniner of the map */
+.angular-google-map-container {
+    position: absolute;
+    padding-bottom: 60px;
+    padding-top: 60px;
+    height: 100%;
+    width: 100%;
+}
+
+/* sur-contaniner for sector display */
+.map-sector {
+    position: absolute;
+    padding-bottom: 60px;
+    height: 85%;
+    width: 100%;
+    
+}
+
+/* sur-contaniner for site display */
+.map-site {
+    position: absolute;
+    height: 50%;
+    width: 100%;
+}
+
+
+
 
 /* ----------------------------------------------------------------------------- */
 /* ----------------------------------------------------------------------------- */
