--- a/platforms/android/assets/www/partials/line/detail.html
+++ b/platforms/android/assets/www/partials/line/detail.html
@@ -1,7 +1,8 @@
-<div class="row secondarybar">
-    <a  ng-click="backSector(line.site,line.sector)"  class="col-xs-2"> <i class="fa fa-chevron-left"></i> </a>
-    <a href="map.html" class="col-xs-2 pull-right switch"> <i class="fa fa-map-marker"></i> </a>
+<div class="secondarybar">
+    <a  href ng-click="backSector(line.site,line.sector)"  class="back"> <i class="fa fa-chevron-left"></i> </a>
+    <a href href="map.html" class="pull-right switch"> <i class="fa fa-map-marker"></i> </a>
 </div>
+
 
 
 
