--- a/platforms/android/assets/www/partials/search.html
+++ b/platforms/android/assets/www/partials/search.html
@@ -1,5 +1,6 @@
 
-
+<br>
+<br>
 <div class="row" align="center">
     <div class="col-xs-10 col-xs-offset-1">
         <div class="input-group">
@@ -7,9 +8,10 @@
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                 </span>
-                </div><!-- /input-group -->
-    </div><!-- /.col-lg-6 -->
-</div><!-- /.row -->
+                </div>
+    </div>
+</div>
+
 
 <h4>
 <div class="row" align="center">
