--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,4 +1,14 @@
+
+<div class="container-fluid">
 <h1>{{title}} <br>
 <small> Bonoway version beta</small></h1>
 
 <p>Bienvenu sur la version beta du projet bonoway. Bonoway est un projet pour le moins ambitieux, qui en apportant une plateforme de partage efficace vise à rassembler tous le plus de topos possible, pour les mettre à la disposition du plus grand nombre gratuitement. </p>
+
+
+</div>
+<footer class="container-fluid">
+    <div class="container text-center">
+        <p>&copy; Copyright (c) Bonoway - 2014</p>
+    </div>
+</footer>
