--- a/platforms/ios/www/partials/site/detail.html
+++ b/platforms/ios/www/partials/site/detail.html
@@ -1,26 +1,24 @@
 
-<div class="row tile">
-    <img class="couv"   ng-src="img/{{site.couv}}">  </img>
-    <div class="col-xs-12">
-        <h3 align="center" ng-bind-html="site.name"> </h3> <br> <br> <br> <br> <br>
-        
+<div class="couverture">
+    <div class="title"> <h2  align="center" ng-bind-html="site.name"> </h2>
+        <p align="center" ng-bind-html="site.tag"> </p>
     </div>
+    <img class="image" ng-src="img/{{site.couv}}"/>
+    
 </div>
 
 
-<p> {{site.tag}} {{site.description}}</p>
+<div class="container"> {{site.description}} </div>
 
 
 
-<h2 align="center">Secteurs : </h2>
-
-<div class="row" ng-click="lineList(site.id,0)">
+<div class="row actif" ng-click="lineList(site.id,0)">
     <h4>
         <div class="col-xs-12"> Voir toutes les voies </div>
     </h4>
 </div>
 
-<div class="row" ng-repeat="sector in sectors" ng-click="lineList(site.id,sector.id)" >
+<div class="row actif" ng-repeat="sector in sectors" ng-click="lineList(site.id,sector.id)" >
     <h4>
         <div class="col-xs-8" ng-bind-html="sector.name"> </div>
         <div class="col-xs-4" ng-bind-html="sector.approach"> </div>
@@ -29,8 +27,8 @@
 
 <br>
 <div class="map-site">
-<google-map center="map.center" zoom="map.zoom" draggable="true">
-<markers models="sectors" coords="'self'"> </markers>
-<markers models="parkings" coords="'self'"> </markers>
-</google-map>
+    <google-map center="map.center" zoom="map.zoom" draggable="true">
+        <markers models="sectors" coords="'self'"> </markers>
+        <markers models="parkings" coords="'self'"> </markers>
+    </google-map>
 </div>
