--- a/platforms/ios/www/partials/db.html
+++ b/platforms/ios/www/partials/db.html
@@ -1,10 +1,21 @@
 
-Hello
+DB testing
 
-<div class="row" ng-repeat="user in users">
+
+----------------------
+
+<div class="row" ng-repeat="line in lines" ng-click="detail(line.id)">
     <h4>
-        <div class="col-xs-6" ng-bind-html="user.username"> </div>
-        <div class="col-xs-3" ng-bind-html="user.password"> </div>
-        <div class="col-xs-3" ng-bind-html="user.age"> </div>
+        <div class="col-xs-7" ng-bind-html="line.name"> </div>
+        <div class="col-xs-2" ng-bind-html="line.grade"> </div>
     </h4>
+    <h5>
+        <div class="col-xs-3" id="row1"> {{line.rate}} </div>
+        <small>
+            <div class="col-xs-12"> #debout #jetté </div>
+        </small></h5>
 </div>
+
+<br>
+
+----------------------
