--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,9 +1,9 @@
 
 <div class="container-fluid">
-<h1>{{title}} <br>
-<small> Bonoway version beta</small></h1>
+<h1>
+<small> A propos de Bonoway beta</small></h1>
 
-<p>Bienvenu sur la version beta du projet bonoway. Bonoway est un projet pour le moins ambitieux, qui en apportant une plateforme de partage efficace vise à rassembler tous le plus de topos possible, pour les mettre à la disposition du plus grand nombre gratuitement. </p>
+<p>Bienvenue sur la version beta du projet Bonoway. Bonoway vise à devenir une plateforme de partage de topo d'escalade. Cette outil permettra à tous decontribuer à un topo global disponible gratuitement dans votre smartphone jusqu'au pied des falaises . </p>
 
 
 </div>
