--- a/www/partials/site/detail.html
+++ b/www/partials/site/detail.html
@@ -3,7 +3,7 @@
     <div class="title"> <h2  align="center" ng-bind-html="site.name"> </h2>
         <p align="center" ng-bind-html="site.tag"> </p>
     </div>
-    <img class="image" ng-src="img/{{site.couv}}"/>
+    <img class="image" ng-src="img/{{site.couverture}}"/>
     
 </div>
 
