--- a/platforms/ios/www/partials/site/list.html
+++ b/platforms/ios/www/partials/site/list.html
@@ -1,7 +1,7 @@
 
 
 <div class="row tile" ng-repeat="site in sites" ng-click="detail(site.id)">
-    <img class="couvlist"   ng-src="img/{{site.couv}}">  </img>
+    <img class="couvlist"   ng-src="img/{{site.couverture}}">  </img>
     <div class="col-xs-8">
         <h4> {{site.name}} <span class="badge">{{site.volume}}</span> </h4> <br>
         <p> {{site.tag}} </p>
