--- a/www/partials/site/list.html
+++ b/www/partials/site/list.html
@@ -1,10 +1,10 @@
 
 
 <div class="row tile" ng-repeat="site in sites" ng-click="detail(site.id)">
-    <img class="couvlist"   ng-src="img/{{site.couv}}">  </img>
+    <img class="couvlist"   ng-src="img/{{site.couverture}}">  </img>
     <div class="col-xs-8">
         <h4> {{site.name}} <span class="badge">{{site.volume}}</span> </h4> <br>
-        <p> {{site.tag}} </p>
+        <p> {{site.tags}} </p>
     </div>
     <div class="col-xs-4" id="row2">
     </div>
