--- a/platforms/android/assets/www/partials/site/map.html
+++ b/platforms/android/assets/www/partials/site/map.html
@@ -16,7 +16,7 @@
 
 
 <div class="map-sector">
-<google-map center="map.center" zoom="map.zoom" draggable="true">
+<google-map center="map.center" zoom="map.zoom" draggable="true" refresh="mapState"">
 <markers models="lines" coords="'self'"> </markers>
 </google-map>
 </div>
