--- a/platforms/ios/www/partials/line/detail.html
+++ b/platforms/ios/www/partials/line/detail.html
@@ -20,9 +20,9 @@
 </div>
 </div>
 
-<div ng-repeat="image in line.images">
-    <img alt="logo" width="100%" height="auto" ng-src="datas/img/lines/{{line.id}}/{{image}}">
-</div>
+
+<img alt="logo" width="100%" height="auto" ng-src="datas/img/lines/{{line.id}}/{{line.image}}">
+
 
 
 <div class="container">
