--- a/platforms/ios/www/partials/site/list.html
+++ b/platforms/ios/www/partials/site/list.html
@@ -4,7 +4,7 @@
     <img class="couvlist"   ng-src="img/{{site.couverture}}">  </img>
     <div class="col-xs-8">
         <h4> {{site.name}} <span class="badge">{{site.volume}}</span> </h4> <br>
-        <p> {{site.tag}} </p>
+        <p> {{site.tags}} </p>
     </div>
     <div class="col-xs-4" id="row2">
     </div>
