--- a/platforms/android/assets/www/partials/line/detail.html
+++ b/platforms/android/assets/www/partials/line/detail.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<img alt="logo" width="100%" height="auto" ng-src="datas/img/lines/{{line.id}}/{{line.image}}">
+<img alt="logo" width="100%" height="auto" ng-src="datas/img/{{line.image}}">
 
 
 
