--- a/platforms/ios/www/css/bonoway.css
+++ b/platforms/ios/www/css/bonoway.css
@@ -208,7 +208,7 @@ a:hover {
 }
 
 
-
+/* mais a quoi ça sert ??? */
 .col-xs-4, .col-xs-6, .col-xs-8, .col-xs-12{
     max-height: 100px;
 }
@@ -217,22 +217,22 @@ a:hover {
 .tile{
     border-bottom: 2px solid #FEFEFE;
     position: relative;
+    height: 120px;
     z-index: 1;
     overflow: hidden;
+    color: rgba(250,250,250,1);
+    text-shadow: 0px 1px 5px rgba(20,20,20,0.5),
+        0px -1px 10px rgba(20,20,20,0.5),
+        -1px 0px 10px rgba(20,20,20,0.5),
+        1px 0px 10px rgba(20,20,20,0.5),
+        0px 4px 10px rgba(20,20,20,0.2),
+        0px -4px 10px rgba(20,20,20,0.2),
+        -4px 0px 10px rgba(20,20,20,0.2),
+        4px 0px 10px rgba(20,20,20,0.2);
 }
 
-/* background image of site detail */
-.tile .couv {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    
-    opacity: .7;
-    width: 100%;
-    height: 100%;
+.tile small{
+    color: #E3E3E3;
 }
 
 /* background images of site list */
@@ -243,10 +243,12 @@ a:hover {
     bottom: 0;
     left: 0;
     right: 0;
-    
-    opacity: .3;
+    margin-top: -50%;
+    padding-top: 60px;
+    opacity: 0.8;
+    filter: saturate(0.9);
+    -webkit-filter: saturate(0.9);
     width: 100%;
-    height: 100%;
 }
 
 /* Site couverture design */
@@ -261,17 +263,21 @@ a:hover {
     position: absolute;
     z-index: 2;
     width: 100%;
-    color: #FEFEFE;
-    text-shadow:#4E5053 0.3px 0.3px,
-    #4E5053 -0.3px 0.3px,
-    #4E5053 -0.3px -0.3px,
-    #4E5053 0.3px -0.3px;
+    color: rgba(250,250,250,1);
+    text-shadow: 0px 1px 5px rgba(20,20,20,0.5),
+    0px -1px 10px rgba(20,20,20,0.5),
+    -1px 0px 10px rgba(20,20,20,0.5),
+    1px 0px 10px rgba(20,20,20,0.5),
+    0px 4px 10px rgba(20,20,20,0.2),
+    0px -4px 10px rgba(20,20,20,0.2),
+    -4px 0px 10px rgba(20,20,20,0.2),
+    4px 0px 10px rgba(20,20,20,0.2);
 }
 
 .couverture .image{
     margin-top: -50%;
     padding-top: 60px;
-    opacity: .7;
+    opacity: 1;
     width: 100%;
 }
 /* _________________________________________________________ */
@@ -284,22 +290,29 @@ a:hover {
     position: absolute;
     width: 100%;
     max-height: 200px;
+
 }
 
 .line-detail .title{
     z-index: 2;
     float: left;
     padding-left: 7px;
-    color: #007aff;
-    text-shadow:#FEFEFE 1px 1px,
-    #FEFEFE -1px 1px,
-    #FEFEFE -1px -1px,
-    #FEFEFE 1px -1px;
+    margin-top: -5px;
+    color: rgba(250,250,250,1);
+    text-shadow: 0px 1px 5px rgba(20,20,20,0.5),
+    0px -1px 10px rgba(20,20,20,0.5),
+    -1px 0px 10px rgba(20,20,20,0.5),
+    1px 0px 10px rgba(20,20,20,0.5),
+    0px 4px 10px rgba(20,20,20,0.2),
+    0px -4px 10px rgba(20,20,20,0.2),
+    -4px 0px 10px rgba(20,20,20,0.2),
+    4px 0px 10px rgba(20,20,20,0.2);
+    
 }
 
 
 
-/* _________________________________________________________ */
+/* _____________________________background: rgba(243, 243, 243, 0.5);____________________________ */
 
 
 
