--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -6,12 +6,11 @@
         <div class="input-group">
             <input type="text" class="form-control" ng-model="searchInput.name">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                    <button class="btn btn-default" type="button" ng-click="search(searchInput.name)"><i class="fa fa-search"></i></button>
                 </span>
                 </div>
     </div>
 </div>
-
 
 <h4>
 <div class="row" align="center">
@@ -22,7 +21,19 @@
 </h4>
 <br>
 
+<h4>
+    
+    <div class="row" ng-repeat="line in resultings">
+        <h4>
+            <div class="col-xs-6" ng-bind-html="line.name"> </div>
+            <div class="col-xs-2" ng-bind-html="line.grade"> </div>
+        </h4>
+    </div>
+    
+    
+</h4>
 
+<!--
 <div class="row tile" ng-repeat="site in sites | filter:searchInput" ng-hide="activeType == 'lines'" ng-show="activeType == 'sites' || activeType == 'all'" ng-click="detailSite(site.id)">
     <img class="couvlist"   ng-src="img/{{site.couv}}">  </img>
     <div class="col-xs-8">
@@ -43,4 +54,4 @@
     <h5>
         <div class="col-xs-4" id="row1"> @ {{line.sitename}}
         </div>
-</div>
+</div> -->
